--- a/domestic_news.html
+++ b/domestic_news.html
@@ -182,7 +182,7 @@
                         <div id="carouselExampleControls" class="carousel slide carousel-dark" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="assets\images\new_screenshots\Domestic News\1622565669687.jpg width="500px"
+                                    <img src="assets\images\new_screenshots\Domestic News\1622565669687.jpg" width="500px"
                                         height="700px class=" d-block w-100" alt="...">
                                 </div>
                                 <div class="carousel-item">
@@ -190,7 +190,7 @@
                                         height="700px class=" d-block w-100" alt="...">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="assets\images\new_screenshots\Domestic News\1622565669698.jpg width="500px"
+                                    <img src="assets\images\new_screenshots\Domestic News\1622565669698.jpg" width="500px"
                                         height="700px class=" d-block w-100" alt="...">
                                 </div>
                             </div>
