Title change to new name

--- a/domestic_price.html
+++ b/domestic_price.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>PETscrapWala</title>
+    <title>Plastic-ScrapWala</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
@@ -412,7 +412,7 @@
                                 <p>Copyright <span class="fa fa-copyright"></span> 2021 Plastic-ScrapWala All Rights
                                     Reserved</p>
                                 <div class="social-link">
-                                    <a href="https://m.facebook.com/PETscrapWala"><i class="fa fa-facebook"></i></a>
+                                  <a href="https://m.facebook.com/PETscrapWala"><i class="fa fa-facebook"></i></a>
                                     <a href="https://twitter.com/PETscrapWalaApp?s=09"><i class="fa fa-twitter"></i></a>
 
                                     <a href="https://www.linkedin.com/company/petscrapwala"><i
