--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@
                                     <ul>
                                         <li><i class="fa fa-phone"></i> <span class="information">9769604901</span></li>
                                         <li><i class="fa fa-envelope-o"></i> <span class="information"><a
-                                                    href="#">info@petscrapwala.com</a></span></li>
+                                                    href="#">info@Plastic-ScrapWala.com</a></span></li>
                                         <li><i class="fa fa-map-o"></i> <span class="information"> Kalpataru Polymer
                                                 Private Limited<br />Flat No A-404, Amar Orchid CHS,<br />Raju Nagar,
                                                 Near Rajvaibhav Complex,<br />Dombivli West, Thane, Maharashtra
@@ -947,8 +947,8 @@
                             <p>Copyright <span class="fa fa-copyright"></span> 2021 Plastic-ScrapWala All Rights
                                 Reserved</p>
                             <div class="social-link">
-                                <a href="https://m.facebook.com/PETscrapWala"><i class="fa fa-facebook"></i></a>
-                                <a href="https://twitter.com/PETscrapWalaApp?s=09"><i class="fa fa-twitter"></i></a>
+                                <a href="https://m.facebook.com/Plastic-ScrapWala"><i class="fa fa-facebook"></i></a>
+                                <a href="https://twitter.com/Plastic-ScrapWalaApp?s=09"><i class="fa fa-twitter"></i></a>
 
                                 <a href="https://www.linkedin.com/company/petscrapwala"><i
                                         class="fa fa-linkedin"></i></a>
