--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         </div>
                         <div class="col-lg-3 ml-auto col-md-4 text-center">
                             <div class="slider-inner-imge-2 banner-right">
-                                <img src="assets/slider1.png" alt="">
+                                <img src="assets/slider1.png" alt="as">
                             </div>
                         </div>
                     </div>
