--- a/domestic_price.html
+++ b/domestic_price.html
@@ -77,7 +77,8 @@
                             <div class="main-menu">
                                 <nav class="main-navigation text-white">
                                     <ul>
-                                        <li class="active"><a href="index.html">Home</a></li>
+                                        <li><a href="index.html">Home</a></li>
+
                                         <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Features</button>
                                         <div class="dropdown-menu">
                                             <a class="dropdown-item" href="domestic_price.html">Domestic Price</a>
