--- a/index.html
+++ b/index.html
@@ -848,7 +848,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="download-buttons">
+                    <div class="download-buttons text-center">
                         <a href="https://apps.apple.com/in/app/pet-scrap-wala/id1435155840" class="button" id="android">
                             <i class="fa fa-apple"></i> APP STORE</a>
                         <a href="https://play.google.com/store/apps/details?id=com.petscrapwala&hl=en_IN" class="button"
