--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                     <div class="row header-top-inner">
                         <div class="col-lg-4">
                             <div class="logo">
-                                <a href="index-5.php" class="d-md-block d-none"><img src="assets/images/logo.jpg" alt=""
+                                <a href="index.html" class="d-md-block d-none"><img src="assets/images/logo.jpg" alt=""
                                         width="100px" height="100px"></a>
-                                <a href="index-5.php" class="d-md-none d-block"><img src="assets/images/logo.jpg" alt=""
+                                <a href="index,html" class="d-md-none d-block"><img src="assets/images/logo.jpg" alt=""
                                         width="30px" height="30px"></a>
                             </div>
                         </div>
@@ -294,7 +294,7 @@
                     <!-- Service Grid Start -->
                     <div class="service-grid">
                         <div class="ht-service-box--one style-03">
-                            <a href="\module_1\domestic_price.html">
+                            <a href="domestic_price.html">
                                 <div class="image__media">
                                     <img src="assets/images/Domestic.png" class="img-fluid" alt="Images">
                                 </div>
@@ -315,7 +315,7 @@
                     <!-- Service Grid Start -->
                     <div class="service-grid">
                         <div class="ht-service-box--one style-03">
-                            <a href="\module_1\International_price.html">
+                            <a href="International_price.html">
                                 <div class="image__media">
                                     <img src="assets/images/Internationall.png" class="img-fluid" alt="Images">
                                 </div>
@@ -335,7 +335,7 @@
                     <!-- Service Grid Start -->
                     <div class="service-grid">
                         <div class="ht-service-box--one style-03">
-                            <a href="\module_1\Live_offers.html">
+                            <a href="Live_offers.html">
                                 <div class="image__media">
                                     <img src="assets/images/Offerr.png" class="img-fluid" alt="Images">
                                 </div>
@@ -356,7 +356,7 @@
                     <!-- Service Grid Start -->
                     <div class="service-grid">
                         <div class="ht-service-box--one style-03">
-                            <a href="\module_1\Directory.html">
+                            <a href="Directory.html">
                                 <div class="image__media">
                                     <img src="assets/images/Directory.png" class="img-fluid" alt="Images">
                                 </div>
@@ -377,7 +377,7 @@
                     <!-- Service Grid Start -->
                     <div class="service-grid">
                         <div class="ht-service-box--one style-03">
-                            <a href="\module_1\Exhibition_centre.html" >
+                            <a href="Exhibition_centre.html" >
                                 <div class="image__media">
                                     <img src="assets/images/Expo.png" class="img-fluid" alt="Images">
                                 </div>
@@ -398,7 +398,7 @@
                     <!-- Service Grid Start -->
                     <div class="service-grid">
                         <div class="ht-service-box--one style-03">
-                            <a href="\module_1\faq.html">
+                            <a href="faq.html">
                                 <div class="image__media">
                                     <img src="assets\images\logo.jpg" class="img-fluid" alt="Images">
                                 </div>
