--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <div class="logo">
                                 <a href="index.html" class="d-md-block d-none"><img src="assets/images/logo.jpg" alt=""
                                         width="100px" height="100px"></a>
-                                <a href="index,html" class="d-md-none d-block"><img src="assets/images/logo.jpg" alt=""
+                                <a href="index.html" class="d-md-none d-block"><img src="assets/images/logo.jpg" alt=""
                                         width="30px" height="30px"></a>
                             </div>
                         </div>
