--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                     LLD, PVC, HIPS, ABS etc.)</p>
                                 <div class="slider-video-button">
                                     <div class="video-popup">
-                                        <a href="https://youtu.be/J2FzQ24WKVA"
+                                        <a href="https://www.youtube.com/watch?v=J2FzQ24WKVA"
                                             class="popup-youtube video-link">
                                             <div class="video-content">
                                                 <div class="ht-popup-video video-button">
