Linking contact and pricing
The contact and pricing button was not linked for pages except index . Now resolved .

--- a/Exhibition_centre.html
+++ b/Exhibition_centre.html
@@ -92,14 +92,14 @@
                                             <a class="dropdown-item" href="#">Used Machinery</a>
                                           </div>
                                         <li><a href="#about">About Us</a></li>
-                                        <li><a href="#pricing">Pricing</a></li>
+                                        <li><a href="index.html#pricing">Pricing</a></li>
 
                                         <li><a
                                                 href="https://play.google.com/store/apps/details?id=com.petscrapwala&hl=en_IN">Android
                                                 App</a></li>
                                         <li><a href="https://apps.apple.com/in/app/pet-scrap-wala/id1435155840">iPhone
                                                 App</a></li>
-                                        <li><a href="#contact">Contact</a></li>
+                                        <li><a href="index.html#contact">Contact</a></li>
                                         <li><a href="\faq.html">FAQ</a></li>
                                     </ul>
                                 </nav>
