--- a/domestic_price.html
+++ b/domestic_price.html
@@ -78,9 +78,9 @@
                                 <nav class="main-navigation text-white">
                                     <ul>
                                         <li><a href="index.html">Home</a></li>
-
                                         <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Features</button>
-                                        <div class="dropdown-menu">
+                                        <li>
+                                            <div class="dropdown-menu ">
                                             <a class="dropdown-item" href="domestic_price.html">Domestic Price</a>
                                             <a class="dropdown-item" href="domestic_news.html">Domestic News</a>
                                             <a class="dropdown-item" href="Live_offers.html">Live!Buy&Sell</a>
@@ -92,15 +92,16 @@
                                             <a class="dropdown-item" href="#">Business Reports</a>
                                             <a class="dropdown-item" href="#">Used Machinery</a>
                                           </div>
+                                        </li>
                                         <li><a href="#about">About Us</a></li>
-                                        <li><a href="#pricing">Pricing</a></li>
+                                        <li><a href="index.html#pricing">Pricing</a></li>
 
                                         <li><a
                                                 href="https://play.google.com/store/apps/details?id=com.petscrapwala&hl=en_IN">Android
                                                 App</a></li>
                                         <li><a href="https://apps.apple.com/in/app/pet-scrap-wala/id1435155840">iPhone
                                                 App</a></li>
-                                        <li><a href="#contact">Contact</a></li>
+                                        <li><a href="index.html#contact">Contact</a></li>
                                         <li><a href="\faq.html">FAQ</a></li>
                                     </ul>
                                 </nav>
