--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                                 <nav class="main-navigation text-white">
                                     <ul>
                                         <li><a href="index.html">Home</a></li>
-                                        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Features</button>
-                                        <div class="dropdown-menu">
+                                        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" style="z-index: 999;" >Features</button>
+                                        <div class="dropdown-menu" >
                                             <a class="dropdown-item" href="domestic_price.html">Domestic Price</a>
                                             <a class="dropdown-item" href="domestic_news.html">Domestic News</a>
                                             <a class="dropdown-item" href="Live_offers.html">Live!Buy&Sell</a>
@@ -115,8 +115,9 @@
         <!-- Header-area end -->
 
         <!-- Hero Slider start -->
+        
         <div class="hero-slider hero-slider-bg-1" id="slider">
-            <div type="button" id="google_translate_element"  style="background:; border:black;text-align:center;text-decoration:none;font-size:16px;position:absolute;color:transparent;right:10px ;z-index:10 ;width:auto;max-height:5px;"></div>
+            <div type="button" id="google_translate_element"  style="background:transparent; border:none;text-align:center;text-decoration:none;font-size:16px;position:absolute;margin:auto;color:transparent;right:10px ;z-index:10 ;"></div>
             <div class="single-slide" style="background-image: url(assets/images/slider/slider-04.png)">
                 <!-- Hero Content One Start -->
                 <div class="hero-content-five container">
