--- a/domestic_news.html
+++ b/domestic_news.html
@@ -92,14 +92,14 @@
                                             <a class="dropdown-item" href="#">Used Machinery</a>
                                           </div>
                                         <li><a href="#about">About Us</a></li>
-                                        <li><a href="#pricing">Pricing</a></li>
+                                        <li><a href="index.html#pricing">Pricing</a></li>
 
                                         <li><a
                                                 href="https://play.google.com/store/apps/details?id=com.petscrapwala&hl=en_IN">Android
                                                 App</a></li>
                                         <li><a href="https://apps.apple.com/in/app/pet-scrap-wala/id1435155840">iPhone
                                                 App</a></li>
-                                        <li><a href="#contact">Contact</a></li>
+                                        <li><a href="index.html#contact">Contact</a></li>
                                         <li><a href="\faq.html">FAQ</a></li>
                                     </ul>
                                 </nav>
@@ -119,7 +119,7 @@
 
         <!-- Hero Slider start -->
         <div class="hero-slider hero-slider-bg-1">
-            <div id="google_translate_element"  style="background:transparent; border:none;text-align:center;text-decoration:none;font-size:16px;position:absolute;margin:auto;color:transparent;right:10px ;z-index:10 ;"></div>
+            <div id="google_translate_element"  style="background:transparent; border:none;text-align:center;text-decoration:none;font-size:16px;position:absolute;margin:auto;margin-bottom: 5%;color:transparent;right:10px ;z-index:10 ;"></div>
             <div class="single-slide" style="background-image: url(assets/images/slider/slider-04.png)">
                 <div class="container">
                     <div class="row align-items-center">
