--- a/index.html
+++ b/index.html
@@ -877,8 +877,10 @@
                                         <li><i class="fa fa-phone"></i> <span class="information">9769604901</span></li>
                                         <li><i class="fa fa-envelope-o"></i> <span class="information"><a
                                                     href="#">info@Plastic-ScrapWala.com</a></span></li>
-                                        <li><i class="fa fa-map-o"></i> <span class="information"> Kalpataru Polymer
-                                                Private Limited<br />Flat No A-404, Amar Orchid CHS,<br />Raju Nagar,
+                                        <li><i class="fa fa-map-o"></i> <span class="information"> Plastic-ScrapWala Price News Trade
+                                            C/o Kalpataru Polymer Private Limited<br />
+                                            <br/>
+                                            Flat No A-404, Amar Orchid CHS,<br />Raju Nagar,
                                                 Near Rajvaibhav Complex,<br />Dombivli West, Thane, Maharashtra
                                                 421202</span></li>
 
