--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
                                     <ul>
                                         <li><i class="fa fa-phone"></i> <span class="information">9769604901</span></li>
                                         <li><i class="fa fa-envelope-o"></i> <span class="information"><a
-                                                    href="#">info@Plastic-ScrapWala.com</a></span></li>
+                                                    href="#">info@plastic-scrapwala.com</a></span></li>
                                         <li><i class="fa fa-map-o"></i> <span class="information"> Plastic-ScrapWala Price News Trade
                                             C/o Kalpataru Polymer Private Limited<br />
                                             <br/>
