--- a/index.html
+++ b/index.html
@@ -877,7 +877,8 @@
                                         <li><i class="fa fa-phone"></i> <span class="information">9769604901</span></li>
                                         <li><i class="fa fa-envelope-o"></i> <span class="information"><a
                                                     href="#">info@plastic-scrapwala.com</a></span></li>
-                                        <li><i class="fa fa-map-o"></i> <span class="information"> Plastic-ScrapWala 
+                                        <li><i class="fa fa-map-o"></i> <span class="information"> Plastic-ScrapWala Price News Trade<br>
+                                            
                                             C/o Kalpataru Polymer Private Limited<br />
                                             <br/>
                                             Flat No A-404, Amar Orchid CHS,<br />Raju Nagar,
